feat: appoitment and cosultation endpoints
